--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 env:
   DOCKER_IMAGE: ghcr.io/${{ github.repository }}
   VERSION: ${{ github.sha }}
-  NAME: ${{ github.repository }}_cicd
+  NAME: ${{ github.repository }}
 
 jobs:
   build:
@@ -18,12 +18,12 @@ jobs:
       - name: Set up docker buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-      - name: Cache docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ env.VERSION }}
-          restore-keys: ${{ runner.os }}-buildx-
+#      - name: Cache docker layers
+#        uses: actions/cache@v2
+#        with:
+#          path: /tmp/.buildx-cache
+#          key: ${{ runner.os }}-buildx-${{ env.VERSION }}
+#          restore-keys: ${{ runner.os }}-buildx-
       - name: Login to ghcr
         uses: docker/login-action@v3.0.0
         with:
@@ -54,6 +54,6 @@ jobs:
       - name: Docker run
         run: |
           docker stop ${{ env.NAME }} && docker rm ${{ env.NAME }} && docker rmi ${{ env.DOCKER_IMAGE }}:latest
-          docker run -d -p 3000:3000 --name ${{ github.repository_name }}_cicd --restart always \
+          docker run -d -p 3000:3000 --name ${{ github.repository_id }} --restart always \
             -e NOTION_API_KEY=${{ secrets.NOTION_API_KEY }} \
             ${{ env.DOCKER_IMAGE }}:latest
