--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-github-calendar": "^4.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
