--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tanstack/react-query": "^5.59.13",
+    "jotai": "^2.10.0",
+    "jotai-tanstack-query": "^0.9.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
+    "@swc-jotai/react-refresh": "^0.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
