--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-github-calendar": "^4.3.0",
-    "recoil": "^0.7.7"
+    "react-github-calendar": "^4.3.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
