--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-github-calendar": "^4.5.1"
+    "react-github-calendar": "^4.5.1",
+    "shadcn-ui": "^0.9.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
