--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tanstack/react-query": "^5.59.16",
+    "@vercel/analytics": "^1.5.0",
     "jotai": "^2.10.1",
     "jotai-tanstack-query": "^0.9.0",
     "next": "14.2.16",
